# heterogeneous-vitis-apps

./: .gitignore  README.md
amd-vadd/.wsdata/: clang_dir_map.json
amd-vadd/hello_world/_ide/.theia/: launch.json
amd-vadd/hello_world_host/: CMakeLists.txt  compile_commands.json
amd-vadd/hello_world_vadd/: compile_commands.json
amd-vadd/hello_world_vadd/vadd/: vadd.hlscompile_summary  vadd.xo
amd-vadd/hello_world_vadd/vadd/hls/: config.cmdline  hls_data.json
amd-vadd/hello_world_vadd/vadd/reports/: v++_compile_vadd_guidance.html
amd-vadd/hello_world_vadd/vadd/sw_emu/: v++_compile_vadd_guidance.pb3  vadd.xo  vadd.xo.compile_summary
cortexsuite-disparity/disparity-malloc/DisparityMalloc_kernel/DisparityMalloc_kernel/hls/impl/misc/drivers/cluster_v1_0/src/: CMakeLists.txt  Makefile  xcluster.h  xcluster_hw.h  xcluster_linux.c  xcluster_sinit.c
edgedetect/: results.csv
edgedetect/edgedetect-baseline/.wsdata/: clang_dir_map.json
edgedetect/edgedetect-baseline/EdgedetectBaseline_cluster/: compile_commands.json  hls_config.cfg
edgedetect/edgedetect-baseline/EdgedetectBaseline_cluster/EdgedetectBaseline_cluster/: EdgedetectBaseline_cluster.hlscompile_summary  EdgedetectBaseline_cluster.hlsrun_csim_summary  EdgedetectBaseline_cluster.hlsrun_package_summary
edgedetect/edgedetect-baseline/EdgedetectBaseline_host/: CMakeLists.txt  compile_commands.json  main.cpp
edgedetect/edgedetect-baseline/EdgedetectBaseline_host/src/: main.cpp  util.cpp
edgedetect/edgedetect-cpu/.wsdata/: clang_dir_map.json
edgedetect/edgedetect-cpu/EdgedetectBaseline_cluster/: compile_commands.json  hls_config.cfg
edgedetect/edgedetect-cpu/EdgedetectBaseline_cluster/EdgedetectBaseline_cluster/: edgedetect.xo  (+2 more)
edgedetect/edgedetect-cpu/EdgedetectBaseline_cluster/EdgedetectBaseline_cluster/hls/.autopilot/db/driver/src/: CMakeLists.txt  xedgedetect_sinit.c
edgedetect/edgedetect-cpu/EdgedetectBaseline_host/: CMakeLists.txt  compile_commands.json  main.cpp
edgedetect/edgedetect-cpu/src/: edgedetect_fpga.cpp
edgedetect/edgedetect-grayscale/.wsdata/: clang_dir_map.json
edgedetect/edgedetect-grayscale/EdgedetectBaseline_cluster/: compile_commands.json  hls_config.cfg
edgedetect/edgedetect-grayscale/EdgedetectBaseline_host/: CMakeLists.txt  compile_commands.json  main.cpp  util.cpp
edgedetect/edgedetect-grayscale/src/: edgedetect.cpp
edgedetect/edgedetect-no-rgb/EdgedetectBaseline_cluster/: hls_config.cfg
edgedetect/edgedetect-optimized/.wsdata/: clang_dir_map.json
edgedetect/edgedetect-optimized/EdgedetectBaseline_cluster/: compile_commands.json  hls_config.cfg
edgedetect/edgedetect-optimized/EdgedetectBaseline_host/: compile_commands.json
(+1619 files in other folders)
